update openai yaml and method linked to use body with post instead of query params (#93)
